Correção de dois erros no librian